# MMFM

./: .gitattributes  .gitignore  README.md  leap.yaml  leap_binder.py  leap_custom_test.py  leap_mapping.yaml  pyproject.toml  requirements.txt
mmfm/: config.py  config.yaml  gcs_utils.py  packages_helpers.py
mmfm/data/: iconqa.py  utils.py
mmfm/dataset/: data_utils.py  dataset.py
mmfm/tools/: generate_img_patch_feature.py
model/: end2end.h5  end2end.onnx
